# rqservice

./: .gitignore  Cargo.toml  README.md  encoder_parameters  rqservice.toml
.circleci/: config.yml
examples/: rqconfig.toml
golang_test_client/: rq_service_golang_client.go
proto/: service.proto  service_go_modified.proto
python_test_client/: encoder_parameters  requirements.txt  rq_service_python_test_client.py  service_pb2.py  service_pb2_grpc.py
src/: app.rs  decoder.rs  encoder.rs  main.rs  rqprocessor.rs  rqserver.rs
src/cli/: cmd.rs  mod.rs  settings.rs
src/rqservice/: server.rs
