# Copyright (c) 2021-2023 The Pastel Core developers
# Distributed under the MIT software license, see the accompanying
# file COPYING or http://www.opensource.org/licenses/mit-license.php.

[package]
name = "rq-service"
version = "1.2.1"
authors = ["ayk", "JHE"]
edition = "2021"

[dependencies]
# raptorQ
raptorq = "1.7.0"

# Config
clap = "4.3.21"
clap_derive = "4.3.12"
config = "0.13.3"
dirs = "5.0.1"
serde_derive = "1.0.183"
serde = "1.0.183"
serde_json = "1.0.104"
flexi_logger = { version = "0.25.6", features = ["async"] }
log = "0.4"
rusqlite = {version = "0.29.0", features = ["bundled"] }
rayon = "1.7.0" 
lazy_static = "1.4.0"
tempfile = "3.7.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
crossbeam = "0.8.2"
chrono = "0.4.26"
toml = "0.7.6"
rand = "0.8.5"
env_logger = "0.10.0"
serial_test = "2.0.0"

# gRPC server/client
tonic = "0.9.2"
prost = "0.11.9"

#Async
tokio = {version = "1.30.0", features = ["full"]}
tokio-stream ="0.1.14"

# other
bs58 = "0.5.0"
sha3 = "0.10.8"
uuid = {version = "1.4.1", features = ["v4"]}
itertools = "0.11.0"

[build-dependencies]
tonic-build = "0.9.2"
