# Copyright (c) 2021-2023 The Pastel Core developers
# Distributed under the MIT software license, see the accompanying
# file COPYING or http://www.opensource.org/licenses/mit-license.php.

[package]
name = "rq-service"
version = "1.2.1"
authors = ["ayk", "JHE"]
edition = "2021"

[dependencies]
# raptorQ
raptorq = "1.8.0"

# Config
clap = "4.5.1"
clap_derive = "4.5.0"
config = "0.14.0"
dirs = "5.0.1"
serde_derive = "1.0.183"
serde = "1.0.197"
serde_json = "1.0.114"
flexi_logger = { version = "0.27.4", features = ["async"] }
log = "0.4"
rusqlite = {version = "0.31.0", features = ["bundled"] }
rayon = "1.8.1" 
lazy_static = "1.4.0"
tempfile = "3.10.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
crossbeam = "0.8.4"
chrono = "0.4.34"
toml = "0.8.10"
rand = "0.8.5"
env_logger = "0.11.2"
serial_test = "3.0.0"
cron = "0.12.0"
once_cell = "1.19.0"

# gRPC server/client
tonic = "0.11.0"
prost = "0.12.3"

#Async
tokio = {version = "1.36.0", features = ["full"]}
tokio-stream ="0.1.14"

# other
bs58 = "0.5.0"
sha3 = "0.10.8"
uuid = {version = "1.7.0", features = ["v4"]}
itertools = "0.12.1"

[build-dependencies]
tonic-build = "0.11.0"
